--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -540,6 +540,8 @@ CONFIG_NVME_TARGET_LOOP=m
 CONFIG_NVME_TARGET_TCP=m
 CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
+CONFIG_MISC_RTSX_PCI=m
+CONFIG_MISC_RTSX_USB=m
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_ST=m
 CONFIG_BLK_DEV_SR=m
@@ -621,6 +623,10 @@ CONFIG_VETH=y
 # CONFIG_NET_VENDOR_BROCADE is not set
 # CONFIG_NET_VENDOR_QUALCOMM is not set
 # CONFIG_NET_VENDOR_RDC is not set
+CONFIG_8139CP=m
+CONFIG_8139TOO=m
+CONFIG_8139TOO_TUNE_TWISTER=y
+CONFIG_8139TOO_8129=y
 CONFIG_R8169=y
 # CONFIG_NET_VENDOR_RENESAS is not set
 # CONFIG_NET_VENDOR_ROCKER is not set
@@ -807,11 +813,13 @@ CONFIG_MFD_AXP20X_I2C=m
 CONFIG_MFD_RK808=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_ARM_SCMI=m
 CONFIG_REGULATOR_FAN53555=y
 CONFIG_REGULATOR_FAN53880=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_RK808=y
+CONFIG_REGULATOR_VCTRL=m
 CONFIG_RC_CORE=y
 CONFIG_BPF_LIRC_MODE2=y
 CONFIG_LIRC=y
@@ -1037,6 +1045,8 @@ CONFIG_MMC_SDHCI_OF_DWCMSHC=y
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_PCI=m
 CONFIG_MMC_DW_ROCKCHIP=y
+CONFIG_MMC_REALTEK_PCI=m
+CONFIG_MMC_REALTEK_USB=m
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=m
@@ -1109,6 +1119,9 @@ CONFIG_EXTCON_ADC_JACK=y
 CONFIG_EXTCON_GPIO=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
+CONFIG_IIO_BUFFER_CB=m
+CONFIG_IIO_BUFFER_DMAENGINE=m
+CONFIG_IIO_BUFFER_HW_CONSUMER=m
 CONFIG_IIO_SW_DEVICE=y
 CONFIG_IIO_SW_TRIGGER=y
 CONFIG_IIO_TRIGGERED_EVENT=m
