--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # builder version
-BUILDER="5.7"
+BUILDER="5.8"
 
 # script
 if [[ `curl -I https://github.com 2>&1 | grep 'HTTP/2 200'` ]]; then
@@ -60,10 +60,6 @@ BUILD_VERSION="1"
 MENUCONFIG="0"
 COMPILER="gcc-$GCC"
 CCACHE="0"
-RTL88XXAU="0"
-RTL88X2BU="0"
-RTL88XXCU="0"
-RTL8188EU="0"
 CUSTOM_DEFCONFIG="0"
 MYCONFIG=""
 LOGGING="0"
@@ -98,23 +94,17 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	" Compiler:"		15 1	"$COMPILER"		15 12 9 0 \
 	" Caching on:"		16 1	"$CCACHE"	 	16 14 2 0 \
 	" "			17 1	""			17 14 0 0 \
-	" Wireless"		18 1	""			18 14 0 0 \
-	" RTL88XXAU:"		19 1	"$RTL88XXAU"		19 13 2 0 \
-	" RTL88X2BU:"		20 1	"$RTL88X2BU"		20 13 2 0 \
-	" RTL88XXCU:"		21 1	"$RTL88XXCU"		21 13 2 0 \
-	" RTL8188EU:"		22 1	"$RTL8188EU"		22 13 2 0 \
-	" "			23 1	""			23 14 0 0 \
-	" Customize"		24 1	""			24 14 0 0 \
-	" Defconfig:"		25 1	"$CUSTOM_DEFCONFIG"	25 13 2 0 \
-	" Name:"		26 1	"$MYCONFIG"		26 8 26 0 \
-	" "			27 1	""			27 14 0 0 \
-	" User Options"		28 1	""			28 14 0 0 \
-	" Logging:"		29 1	"$LOGGING"		29 11 2 0 \
-	" Verbosity:"		30 1	"$VERBOSE"		30 13 2 0 \
-	" Devel Rootfs:"	31 1	"$DEVROOTFS"		31 16 2 0 \
-	" Compress img:"	32 1	"$COMPRESS_IMG"		32 16 2 0 \
-	" User scripts:"	33 1	"$USCRIPTS"		33 16 2 0 \
-	" User service:"	34 1	"$USERACCT"		34 16 2 0 \
+	" Customize"		18 1	""			18 14 0 0 \
+	" Defconfig:"		19 1	"$CUSTOM_DEFCONFIG"	19 13 2 0 \
+	" Name:"		20 1	"$MYCONFIG"		20 8 26 0 \
+	" "			21 1	""			21 14 0 0 \
+	" User Options"		22 1	""			22 14 0 0 \
+	" Logging:"		23 1	"$LOGGING"		23 11 2 0 \
+	" Verbosity:"		24 1	"$VERBOSE"		24 13 2 0 \
+	" Devel Rootfs:"	25 1	"$DEVROOTFS"		25 16 2 0 \
+	" Compress img:"	26 1	"$COMPRESS_IMG"		26 16 2 0 \
+	" User scripts:"	27 1	"$USCRIPTS"		27 16 2 0 \
+	" User service:"	28 1	"$USERACCT"		28 16 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -135,10 +125,6 @@ echo BUILD_VERSION='"' >> tmp0
 echo MENUCONFIG= >> tmp0
 echo COMPILER='"' >> tmp0
 echo CCACHE= >> tmp0
-echo RTL88XXAU= >> tmp0
-echo RTL88X2BU= >> tmp0
-echo RTL88XXCU= >> tmp0
-echo RTL8188EU= >> tmp0
 echo CUSTOM_DEFCONFIG= >> tmp0
 echo MYCONFIG='"' >> tmp0
 echo LOGGING= >> tmp0
@@ -148,7 +134,6 @@ echo COMPRESS_IMG= >> tmp0
 echo USCRIPTS= >> tmp0
 echo USERACCT= >> tmp0
 echo 'EMMC="0"' >> tmp0
-echo 'AIRCRACK="0"' >> tmp0
 echo 'ROOTPASSWD="0"' >> tmp0
 echo 'USER_PKGS="htop libsensors-dev"' >> tmp0
 echo 'CLANG="0"' >> tmp0
@@ -159,6 +144,10 @@ echo CORES=\`nproc\` >> tmp0
 echo 'CFLAGS=""' >> tmp0
 echo 'KBUSER="marvin"' >> tmp0
 echo 'KBHOST="martian"' >> tmp0
+echo 'AIRCRACK="0"' >> tmp0
+echo 'RTL88XXAU="0"' >> tmp0
+echo 'RTL88X2BU="0"' >> tmp0
+echo 'RTL88XXCU="0"' >> tmp0
 echo "set_locales(){" >> tmp0
 echo "apt install -y locales" >> tmp0
 echo "export LANGUAGE=${LOCALE}" >> tmp0
@@ -187,10 +176,6 @@ echo >> tmp2
 echo '"' >> tmp2
 echo >> tmp2
 echo >> tmp2
-echo >> tmp2
-echo >> tmp2
-echo >> tmp2
-echo >> tmp2
 echo _defconfig'"' >> tmp2
 paste -d '\0' tmp0 tmp1 tmp2  > userdata.txt
 rm -f tmp0 tmp1 tmp2
@@ -199,14 +184,14 @@ rm -f tmp0 tmp1 tmp2
 sed -i '1i### USER INFORMATION' userdata.txt
 sed -i '6i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
-sed -i '17i### WIRELESS' userdata.txt
-sed -i '22i### CUSTOM' userdata.txt
-sed -i '35i### COMPILER TUNING' userdata.txt
-sed -i '42i### WHOAMI AND HOST' userdata.txt
-sed -i '45i### LOCALES' userdata.txt
-sed -i '53i### TIMEZONE' userdata.txt
-sed -i '58i### NAME SERVER' userdata.txt
-sed -i '61i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '17i### CUSTOM' userdata.txt
+sed -i '29i### COMPILER TUNING' userdata.txt
+sed -i '36i### WHOAMI AND HOST' userdata.txt
+sed -i '39i### WIRELESS' userdata.txt
+sed -i '44i### LOCALES' userdata.txt
+sed -i '52i### TIMEZONE' userdata.txt
+sed -i '57i### NAME SERVER' userdata.txt
+sed -i '60i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # customize your image
 custom_txt(){
