--- a/defconfig/odroid-xu4_defconfig
+++ b/defconfig/odroid-xu4_defconfig
@@ -893,24 +893,43 @@ CONFIG_W1_SLAVE_DS2781=m
 CONFIG_W1_SLAVE_DS28E04=m
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
+CONFIG_BATTERY_SAMSUNG_SDI=y
 CONFIG_BATTERY_SBS=y
 CONFIG_BATTERY_MAX17040=y
 CONFIG_BATTERY_MAX17042=y
+CONFIG_SENSORS_AXI_FAN_CONTROL=m
+CONFIG_SENSORS_G760A=m
+CONFIG_SENSORS_G762=m
+CONFIG_SENSORS_GPIO_FAN=y
+CONFIG_SENSORS_IIO_HWMON=m
 CONFIG_SENSORS_LM90=y
 CONFIG_SENSORS_NTC_THERMISTOR=y
+CONFIG_SENSORS_OCC_P8_I2C=m
+CONFIG_PMBUS=m
 CONFIG_SENSORS_PWM_FAN=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_WATCHDOG=y
 CONFIG_S3C2410_WATCHDOG=y
+CONFIG_MFD_ACT8945A=m
+CONFIG_MFD_AS3711=y
+CONFIG_MFD_AS3722=m
+CONFIG_MFD_EXYNOS_LPASS=m
 CONFIG_MFD_SEC_CORE=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_VIRTUAL_CONSUMER=m
+CONFIG_REGULATOR_USERSPACE_CONSUMER=m
+CONFIG_REGULATOR_ACT8865=m
+CONFIG_REGULATOR_FAN53555=m
+CONFIG_REGULATOR_FAN53880=m
 CONFIG_REGULATOR_GPIO=y
+CONFIG_REGULATOR_PWM=m
 CONFIG_REGULATOR_S2MPA01=y
 CONFIG_REGULATOR_S2MPS11=y
 CONFIG_REGULATOR_S5M8767=y
+CONFIG_REGULATOR_VCTRL=m
 CONFIG_RC_CORE=y
 CONFIG_RC_DECODERS=y
 CONFIG_IR_JVC_DECODER=m
@@ -1380,6 +1399,8 @@ CONFIG_CM36651=y
 CONFIG_AK8975=y
 CONFIG_PWM=y
 CONFIG_PWM_SAMSUNG=y
+CONFIG_PHY_EXYNOS_PCIE=y
+CONFIG_PHY_SAMSUNG_UFS=m
 CONFIG_PHY_EXYNOS5250_SATA=y
 CONFIG_DAX=y
 CONFIG_VALIDATE_FS_PARSER=y
